[www.hlidacshopu.cz] Images optimization

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -37,10 +37,10 @@
       </div>
       <div class="example mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <img alt="Hlídač Shopů - Ukázka"
-             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png"
-             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1.5x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 2x"
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_500/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_500/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_500/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 2x"
              width="100%">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -85,10 +85,10 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Jak Hlídač Shopů vypadá a jak číst graf?</h2>
         <img alt="Jak Hlídač Shopů vypadá a jak číst graf?"
-             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png"
-             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 1x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 1.5x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 2x"
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 2x"
              width="784">
         <p>Hlídač Shopů si můžete <b>nainstalovat přímo do svého prohlížeče</b> a
           hlídat tak největší e-shopy a jejich někdy prapodivné taktiky při
@@ -136,30 +136,30 @@
 
       <div class="step_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121993/www.hlidacshopu.cz/search.jpg"
-          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto/v1572121993/www.hlidacshopu.cz/search.jpg 1x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto/v1572121993/www.hlidacshopu.cz/search.jpg 1.5x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto/v1572121993/www.hlidacshopu.cz/search.jpg 2x"
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572121993/www.hlidacshopu.cz/search.jpg"
+          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572121993/www.hlidacshopu.cz/search.jpg 1x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572121993/www.hlidacshopu.cz/search.jpg 1.5x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572121993/www.hlidacshopu.cz/search.jpg 2x"
           alt="Najít Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Najděte rozšíření v&nbsp;obchodě</h3>
         <p class="grey-text">Přejděte do <a href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk" class="text--purple">obchodu Chrome</a> na stránku Hlídače Shopů.</p>
       </div>
       <div class="step_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121995/www.hlidacshopu.cz/install.jpg"
-          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto/v1572121995/www.hlidacshopu.cz/install.jpg 1x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto/v1572121995/www.hlidacshopu.cz/install.jpg 1.5x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto/v1572121995/www.hlidacshopu.cz/install.jpg 2x,"
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572121995/www.hlidacshopu.cz/install.jpg"
+          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572121995/www.hlidacshopu.cz/install.jpg 1x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572121995/www.hlidacshopu.cz/install.jpg 1.5x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572121995/www.hlidacshopu.cz/install.jpg 2x,"
           alt="Instalovat Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Přidejte si rozšíření do prohlížeče</h3>
         <p class="grey-text">Vpravo nahoře klikněte na tlačítko Přidat do Chromu</p>
       </div>
       <div class="step_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572290612/www.hlidacshopu.cz/usage.jpg"
-          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto/v1572290612/www.hlidacshopu.cz/usage.jpg 1x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto/v1572290612/www.hlidacshopu.cz/usage.jpg 1.5x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto/v1572290612/www.hlidacshopu.cz/usage.jpg 2x,"
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572290612/www.hlidacshopu.cz/usage.jpg"
+          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572290612/www.hlidacshopu.cz/usage.jpg 1x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572290612/www.hlidacshopu.cz/usage.jpg 1.5x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572290612/www.hlidacshopu.cz/usage.jpg 2x,"
           alt="Použití Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Potvrďte instalaci rozšíření</h3>
         <p class="grey-text">Poté na vás vyskočí okno, kde potvrdíte přidání do Chromu tlačítkem Přidat rozšíření.</p>
@@ -213,7 +213,7 @@
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <p>Skvělý doplněk a výborný nápad něco takového vytvořit. Človek si
-              tak udelá představu o&nbsp;tom jak funguji slevy a z&nbsp;jake ceny se
+              tak udelá představu o&nbsp;tom, jak funguji slevy a z&nbsp;jake ceny se
               slevuje…</p>
           </div>
         </div>
@@ -262,10 +262,10 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Nejzajímavější slevy</h2>
       <img alt="Obrázek nejzajímavějších slev"
-           src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/mall-black-friday.png"
-           srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1x,
-                   https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1.5x,
-                   https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 2x"
+           src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/mall-black-friday.png"
+           srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1x,
+                   https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1.5x,
+                   https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 2x"
            width="722">
     </div>
   </div>
