--- a/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
+++ b/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
@@ -38,41 +38,45 @@
         <hr>
         <p>Hlídač shopů je neziskový projekt, jehož cílem je chránit české spotřebitele před vynalézavostí
           marketingových oddělení velkých českých eshopů. Více než dva roky monitorujeme vývoj cen produktů na
-          největších českých eshopech, včetně uváděné slevy a “původní ceny”, ze které byla sleva vypočítána. Příklady,
+          největších českých eshopech, včetně uváděné slevy a „původní ceny“, ze které byla sleva vypočítána. Příklady,
           na které jsme narazili, vnímáme jako jasné klamání zákazníka. Jeden příklad mluvící za všechny:</p>
-        <p>Pokud jste si na CZC.cz koupili v&nbsp;rámci Black Friday monitor Philips
-          Brilliance 241P6QPJKES, mohli jste se těšit z&nbsp;větší slevy, ale současně
+        <p>Pokud jste si na CZC.cz koupili v&nbsp;rámci <b>Black Friday</b> monitor <i>Philips
+          Brilliance 241P6QPJKES</i>, mohli jste se těšit z&nbsp;větší slevy, ale současně
           i&nbsp;z&nbsp;větší ceny, než kdybyste si ho na stejném eshopu koupili o&nbsp;14&nbsp;dní
           dříve (viz graf vývoje prodejní a původní ceny níže). Eshop totiž
           v&nbsp;rámci zařazení tohoto produktu do Black Friday akce současně navýšil
-          “původní cenu” (ta přeškrtnutá, ze které se vypočítává sleva).
+          „původní cenu“ (ta přeškrtnutá, ze které se vypočítává sleva).
           Tato praktika není ojedinělá, viz text&nbsp;níže.</p>
 
-        <img alt="Znázorňující Graf"
-             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572293188/www.hlidacshopu.cz/graf.svg">
+        <img alt="Znázorňující Graf 1"
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515748/www.hlidacshopu.cz/graf-01.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572515748/www.hlidacshopu.cz/graf-01.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572515748/www.hlidacshopu.cz/graf-01.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515748/www.hlidacshopu.cz/graf-01.png 2x"
+             width="100%" height="450">
 
         <h2>Proč si myslíme, že se jedná o&nbsp;klamání spotřebitele?</h2>
         <hr>
         <p>V&nbsp;zákoně o&nbsp;ochraně spotřebitele (č. 634/1992 Sb.) se píše
           následující:</p>
-        <p>§ 4&nbsp;Nekalá obchodní praktika <br>
+        <p>§&nbsp;4&nbsp;Nekalá obchodní praktika <br>
           … <br>
-          (3) Nekalou obchodní praktikou se rozumí zejména klamavé konání podle § 5&nbsp;nebo klamavé opomenutí podle §
-          5a a agresivní obchodní praktika podle § 5b. Obchodní praktiky, které se považují za nekalé za všech
+          (3) Nekalou obchodní praktikou se rozumí zejména klamavé konání podle §&nbsp;5&nbsp;nebo klamavé opomenutí podle §
+          5a a agresivní obchodní praktika podle §&nbsp;5b. Obchodní praktiky, které se považují za nekalé za všech
           okolností, jsou uvedeny v&nbsp;příloze č. 1&nbsp;a 2&nbsp;tohoto zákona.<br>
           (4) <b>Užívání nekalé obchodní praktiky</b> před
           rozhodnutím ohledně koupě, v&nbsp;průběhu rozhodování a po učinění
           rozhodnutí <b>se zakazuje</b>.</p>
-        <p>§ 5&nbsp;Klamavá konání<br>
+        <p>§&nbsp;5&nbsp;Klamavá konání<br>
           …<br>
           (2) Za klamavou se považuje také obchodní praktika obsahující pravdivou informaci, jestliže vede nebo může
           vést
           spotřebitele k&nbsp;rozhodnutí ohledně koupě, které by jinak neučinil, pokud
           <b>jakýmkoli způsobem uvádí nebo je schopna uvést spotřebitele v&nbsp;omyl
-            ohledně</b>&nbsp;…<br>
+            ohledně</b>…<br>
           …<br>
           d) <b>ceny nebo způsobu výpočtu ceny anebo existence konkrétní cenové výhody,</b><br>
-          ...
+          …
         </p>
         <p>Na příkladu výše je vidět obchodní praktika, kterou se obchodník
           snaží uvést spotřebitele v&nbsp;omyl existencí konkrétní cenové výhody,
@@ -84,7 +88,7 @@
           obchodními praktikami našich eshopů pomocí reálných dat, ke kterým se
           jinak nelze jednoduše dostat. Prakticky se snažíme pomoci s&nbsp;rozhodováním
           při nákupu na internetu tím, že spotřebitelům zobrazujeme vývoj prodejní
-          ceny daného produktu včetně vývoje “původní ceny”. Díky tomu
+          ceny daného produktu včetně vývoje „původní ceny“. Díky tomu
           nakupující na první pohled vidí výhodnost koupě, případně klamání ze
           strany obchodníka uměle vytvořenou slevou.</p>
 
@@ -100,7 +104,7 @@
         <h2>Naše služba je obdobná tomu, co nabízí Heureka.cz, ale liší se
           v&nbsp;následujícím:</h2>
         <hr>
-        <p class="purple-list">+ Monitorujeme i “původní cenu” a tím výši slevy<br>
+        <p class="purple-list">+ Monitorujeme i „původní cenu“ a tím výši slevy<br>
           + Sledujeme vývoj ceny produktu na daném eshopu, nejen průměrnou / minimální cenu přes všechny
           eshopy<br>
           + Pokrýváme i&nbsp;eshopy, které Heurece data neposkytují (např. <a href="https://alza.cz/">Alza.cz</a>)</p>
@@ -110,7 +114,7 @@
         <h2>Jak to vše začalo?</h2>
         <p>Vše začalo na podzim roku 2017, kdy jsme se v&nbsp;Apify chtěli podívat na
           to, jak největší české eshopy pracují se slevami v&nbsp;rámci Black Friday.
-          Nevěřili jsme uváděným “až 80% slevám” a tak jsme vybrali zástupce
+          Nevěřili jsme uváděným „až 80% slevám“ a tak jsme vybrali zástupce
           největších českých e-shopů (Alza.cz, Mall.cz a CZC.cz) a celý měsíc
           před Black Friday denně monitorovali ceny všech jejich produktů. Během
           Black Friday (který probíhal v&nbsp;tu dobu celý týden před pátkem 24.11.)
@@ -129,14 +133,22 @@
           měsícem stála pouze o&nbsp;stovku víc, přesněji 2,749&nbsp;Kč a zlevněná byla
           z&nbsp;2,799&nbsp;Kč. Kouzlo je v&nbsp;tom, že Mall.cz 19.11. (začátek Black Friday
           akce) najednou navýšil původní cenu z&nbsp;2,799&nbsp;Kč na 4,899&nbsp;Kč.</p>
-        <img alt="Znázorňující Graf"
-             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572294368/www.hlidacshopu.cz/graf02.svg">
+        <img alt="Znázorňující Graf 2"
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515749/www.hlidacshopu.cz/graf-02.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572515749/www.hlidacshopu.cz/graf-02.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572515749/www.hlidacshopu.cz/graf-02.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515749/www.hlidacshopu.cz/graf-02.png 2x"
+             width="100%">
         <p>U&nbsp;Alza.cz jsme našli obdobný případ. Koloběžka Urbanstar Uscooter byla
           sice zlevněna na 6,290&nbsp;Kč, nicméně původní cena navýšená 17.11.&nbsp;ze
           7,500&nbsp;Kč na 9,999&nbsp;Kč. Tedy místo reálných 16&nbsp;% byla zázrakem vykouzlena
           sleva 37&nbsp;%.</p>
-        <img alt="Znázorňující Graf"
-             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572294366/www.hlidacshopu.cz/graf_03.svg">
+        <img alt="Znázorňující Graf 3"
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515747/www.hlidacshopu.cz/graf-03.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572515747/www.hlidacshopu.cz/graf-03.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572515747/www.hlidacshopu.cz/graf-03.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515747/www.hlidacshopu.cz/graf-03.png 2x"
+             width="100%">
         <p>Na CZC.cz jsme dokonce našli produkty inzerované v&nbsp;Black Friday sekci,
           u&nbsp;kterých se navýšila nejenom původní cena, ale dokonce i&nbsp;cena samotná,
           ta po slevě. (viz příklad na začátku této stránky).<br>
@@ -161,10 +173,10 @@
           společný projekt, na kterém aktuálně spolupracuje Apify, TopMonks a
           Keboola.</p>
         <img alt="Hlídač Shopů - Ukázka"
-             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png"
-             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1.5x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 2x"
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 2x"
              width="100%">
       </div>
     </div>
