[www.hlidacshopu.cz] Updated images URLs

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -162,30 +162,31 @@
 
       <div class="step_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572121993/www.hlidacshopu.cz/search.jpg"
-          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572121993/www.hlidacshopu.cz/search.jpg 1x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572121993/www.hlidacshopu.cz/search.jpg 1.5x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572121993/www.hlidacshopu.cz/search.jpg 2x"
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515560/www.hlidacshopu.cz/search.png"
+          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572515560/www.hlidacshopu.cz/search.png 1x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572515560/www.hlidacshopu.cz/search.png 1.5x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572515560/www.hlidacshopu.cz/search.png 2x"
           alt="Najít Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Najděte rozšíření v&nbsp;obchodě</h3>
         <p class="grey-text">Přejděte do <a href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk" class="text--purple">obchodu Chrome</a> na stránku Hlídače Shopů.</p>
       </div>
       <div class="step_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572121995/www.hlidacshopu.cz/install.jpg"
-          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572121995/www.hlidacshopu.cz/install.jpg 1x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572121995/www.hlidacshopu.cz/install.jpg 1.5x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572121995/www.hlidacshopu.cz/install.jpg 2x,"
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515567/www.hlidacshopu.cz/install.png"
+          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572515567/www.hlidacshopu.cz/install.png 1x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572515567/www.hlidacshopu.cz/install.png 1.5x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572515567/www.hlidacshopu.cz/install.png 2x,"
+
           alt="Instalovat Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Přidejte si rozšíření do prohlížeče</h3>
         <p class="grey-text">Vpravo nahoře klikněte na tlačítko Přidat do Chromu</p>
       </div>
       <div class="step_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572290612/www.hlidacshopu.cz/usage.jpg"
-          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572290612/www.hlidacshopu.cz/usage.jpg 1x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572290612/www.hlidacshopu.cz/usage.jpg 1.5x,
-                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572290612/www.hlidacshopu.cz/usage.jpg 2x,"
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515574/www.hlidacshopu.cz/usage.png"
+          srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_640/v1572515574/www.hlidacshopu.cz/usage.png 1x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_640/v1572515574/www.hlidacshopu.cz/usage.png 1.5x,
+                  https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_640/v1572515574/www.hlidacshopu.cz/usage.png 2x,"
           alt="Použití Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Potvrďte instalaci rozšíření</h3>
         <p class="grey-text">Poté na vás vyskočí okno, kde potvrdíte přidání do Chromu tlačítkem Přidat rozšíření.</p>
